[gd_scene load_steps=3 format=2]

[ext_resource path="res://Ad.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="Ad" type="Node2D"]
script = ExtResource( 1 )

[node name="getImageUrlRequest" type="HTTPRequest" parent="."]

[node name="getImageRequest" type="HTTPRequest" parent="."]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="request_completed" from="getImageUrlRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="getImageRequest" to="." method="_on_getImageRequest_request_completed"]
